# mcp-weather

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.example.yml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  test_http_client.py
.github/workflows/: docker.yml  quality.yml
mcp_weather/: __init__.py  utils.py  weather.py
mcp_weather/clients/: accuweather.py  base.py  weathergov.py
tests/: conftest.py
tests/e2e/: test_http_client.py  test_integration.py  test_server.py
tests/unit/: test_weather_clients.py  test_weather_server.py
