[project]
name = "mcp-weather"
version = "0.2.0"
description = "Weather forecast tool for MCP with HTTP streaming support"
authors = []
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "python-dotenv",
    "aiohttp",
    "uvicorn",
    "mcp[cli]>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-weather = "mcp_weather.weather:mcp.run"
